# hk4e-check-bypass

./: .gitignore  README.md  README_zh.md  Release_dlls.rar  hk4e-check-bypass.sln  lol.md
Release_dlls/: libraries.txt
VersionShim/: .gitignore  README.md  VersionShim.sln
VersionShim/VersionShim/: VersionShim.vcxproj  VersionShim.vcxproj.filters  dllmain.c  pch.c  pch.h  util.c  util.h
checkbypass/: Cargo.toml
checkbypass/src/: interceptor.rs  lib.rs  util.rs
checkbypass/src/modules/: check.rs  kick.rs  mod.rs  patch1.rs  patch2.rs
hk4e-check-bypass/: Console.cpp  Console.h  dllmain.cpp  hk4e-check-bypass.vcxproj  hk4e-check-bypass.vcxproj.filters
mhypbase/: Cargo.toml  build.rs  mhypbase.def  mhypbase.vcxproj  mhypbase.vcxproj.filters
mhypbase/src/: dllmain.cpp  lib.rs  pch.h
